fix(ffe-context-message): Fix icons with wrong colors and dimensions

--- a/packages/ffe-context-message/less/ffe-context-message.less
+++ b/packages/ffe-context-message/less/ffe-context-message.less
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    padding: 2.3em 2em 2.3em 2.3em;
+    padding: 1.2em 2em 1.2em 2.3em;
     text-align: left;
 
     &__header {
@@ -25,8 +25,8 @@
         width: 4em;
 
         &-svg {
-            height: 3em;
-            width: 3em;
+            height: 2.2em;
+            width: 2.2em;
             padding: 0.2em;
             fill: @ffe-blue-royal;
         }
@@ -107,6 +107,10 @@
 
     &--success {
         background-color: @ffe-green-mint;
+
+        .ffe-context-message-content__icon-svg {
+            fill: @ffe-green-shamrock;
+        }
     }
 
     &--error {
